fix horizontal scroll in mobile version of chat

--- a/src/style/_chat-header.scss
+++ b/src/style/_chat-header.scss
@@ -19,8 +19,8 @@ align-items: center;
     display: none;
     @media (max-width:720px){
         display: flex;
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
     }
     .back-icon__icon{
         width:100%
